--- a/CLTproject.Rmd
+++ b/CLTproject.Rmd
@@ -42,7 +42,7 @@ p+ geom_vline(aes(xintercept=mean(kkardashtemp)),
 print(paste('mean = ', mean(my1000$kkardashtemp),' sd = ',sd(my1000$kkardashtemp)))
 ```
 
-```{r}
+```{r include=TRUE,echo=FALSE}
 numb=2
 Hdata = Homers_data[sample(1:1000, size=numb*1000, replace=T),"kkardashtemp"]
 mdata  <-matrix(Hdata,nrow=1000,ncol=numb)
@@ -58,12 +58,23 @@ p
             color="blue", linetype="dashed", size=1)
 print(paste('mean = ', mean(my1000$k2),' sd = ',sd(my1000$k2)))
 
+
+cltSD2 <- sd(my1000$kkardashtemp) / sqrt(numb)
+cltMean2 <- 50
+diffSD2 <- abs(sd(my1000$k2)-cltSD2)
+diffMean2 <- abs(mean(my1000$k2)-cltMean2)
+
+cat("Expected SD for n =", numb, ": ", cltSD2, "\n")
+cat("Expected Mean for n =", numb, ": ", cltMean2, "\n\n")
+cat("Difference in SD = ", diffSD2, "\n")
+cat("Difference in Mean = ", diffMean2, "\n")
+
 ```
 ## We expect the sample mean to be close to population and the standev to get smaller by the ratio of one to the sample size. In this case 1/sqrt(2)
 
 ### There are 3 peaks in the density plot. You pick two people you can get MM,MF.FM,or FF. these are all equally likey so the little peak on left is all the FF's while the little peak on the right is all the MM's so the big one in the middle is both the MF and FM in the same bag so-to-speak.  
 
-```{r}
+```{r include=TRUE,echo=FALSE}
 numb = 4
 Hdata = Homers_data[sample(1:1000,size=numb*1000, replace=T),"kkardashtemp"]
 mdata  <-matrix(Hdata,nrow=1000,ncol=numb)
@@ -82,8 +93,49 @@ p + ggtitle("n = 4") +
 
 print(paste('mean = ', mean(my1000$k4),' sd = ',sd(my1000$k4)))
 
+cltSD4 <- sd(my1000$kkardashtemp) / sqrt(numb)
+cltMean4 <- 50
+diffSD4 <- abs(sd(my1000$k4)-cltSD4)
+diffMean4 <- abs(mean(my1000$k4)-cltMean4)
+
+cat("Expected SD for n =", numb, ": ", cltSD4, "\n")
+cat("Expected Mean for n =", numb, ": ", cltMean4, "\n\n")
+cat("Difference in SD = ", diffSD4, "\n")
+cat("Difference in Mean = ", diffMean4, "\n")
+
 ```
 
 ### In this case the stdev was cut in half because the sample size was four. This is what the central limit theorem says. There are also 5 peaks. They go from FFFF,to FFFM, to FFMM to FMMM and finally MMMM.
 
 # Now finish by adding blocks with numb being 9, then 16, 25, and 36. be sure to mention how the standard deviation progresses as the sample size changes,
+
+```{r include=TRUE,echo=FALSE}
+numb = 9
+Hdata = Homers_data[sample(1:1000,size=numb*1000, replace=T),"kkardashtemp"]
+mdata  <-matrix(Hdata,nrow=1000,ncol=numb)
+x.avg <- apply(mdata,1,mean)
+my1000$k9 = x.avg
+
+
+p <- ggplot(my1000, aes(x=k9),col=sex) + 
+  geom_density() +
+
+# Add mean line
+ geom_vline(aes(xintercept=mean(k9)),
+            color="blue", linetype="dashed", size=1)
+p + ggtitle("n = 9") +
+  xlab("temperature") + ylab(" density")
+
+print(paste('mean = ', mean(my1000$k9),' sd = ',sd(my1000$k9)))
+
+cltSD9 <- sd(my1000$kkardashtemp) / sqrt(numb)
+cltMean9 <- 50
+diffSD9 <- abs(sd(my1000$k9)-cltSD9)
+diffMean9 <- abs(mean(my1000$k9)-cltMean9)
+
+cat("Expected SD for n =", numb, ": ", cltSD9, "\n")
+cat("Expected Mean for n =", numb, ": ", cltMean9, "\n\n")
+cat("Difference in SD = ", diffSD9, "\n")
+cat("Difference in Mean = ", diffMean9, "\n")
+
+```
